Revert "feat(DATA-1554): send subscription check status result in kafka topic tr_in_subscription_monitoring"
This reverts commit 98ba520bd93f11e3d6599863963d3c829e1396a8.